--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,8 @@ src/generated
 extern/mad-0.15.1b/config.h
 extern/libjpeg/jconfig.h
 extern/newogg/include/ogg/config_types.h
+*.vcxproj
+*.vcxproj.filters
 
 # Text Editor Based Items
 ___*
