--- a/.gitmodules
+++ b/.gitmodules
@@ -9,7 +9,7 @@
 	url = https://github.com/stepmania/googletest.git
 [submodule "extern/tomcrypt"]
 	path = extern/tomcrypt
-	url = https://github.com/stepmania/libtomcrypt.git
+	url = https://github.com/libtom/libtomcrypt.git
 [submodule "extern/tommath"]
 	path = extern/tommath
 	url = https://github.com/stepmania/libtommath.git
